--- a/web_test_03/src/main/webapp/WEB-INF/web.xml
+++ b/web_test_03/src/main/webapp/WEB-INF/web.xml
@@ -5,6 +5,16 @@
 
 	<!-- The definition of the Root Spring Container shared by all Servlets and Filters -->
 	
+	<!-- spring security -->
+	<filter>
+        <filter-name>springSecurityFilterChain</filter-name>
+        <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>springSecurityFilterChain</filter-name>
+        <url-pattern>/tns/*</url-pattern>
+    </filter-mapping>
+	
 	<filter>
         <filter-name>encodingFilter</filter-name>
         <filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
@@ -18,7 +28,6 @@
         <filter-name>encodingFilter</filter-name>
         <url-pattern>/*</url-pattern>
     </filter-mapping>
-
 	
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
@@ -27,6 +36,7 @@
 			classpath:mybatis/context-mybatis.xml 
 			-->
 			classpath:/spring/root-context.xml
+			classpath:/spring/security-context.xml
 		</param-value>
 	</context-param>
 	
