로그인 연동 성공!!!!!

--- a/web_test_03/src/main/webapp/WEB-INF/web.xml
+++ b/web_test_03/src/main/webapp/WEB-INF/web.xml
@@ -12,7 +12,7 @@
     </filter>
     <filter-mapping>
         <filter-name>springSecurityFilterChain</filter-name>
-        <url-pattern>/tns/*</url-pattern>
+        <url-pattern>/*</url-pattern>
     </filter-mapping>
 	
 	<filter>
